<resources>
    <string name="app_name">Explorer</string>

    <!--    common for all-->
    <string name="group_of_focusable_content_inner_object">false</string>
    <string name="group_of_focusable_content_object">true</string>


    <!--    FragmentSearch-->
    <string name="introduction">This application helps you to explore the image archives of NASA. Let\'s explore. </string>
    <string name="label_query">Query</string>
    <string name="query_text">Milky way</string>
    <string name="label_start_year">Start year</string>
    <string name="start_year_text">1980</string>
    <string name="label_end_year">End year</string>
    <string name="end_year_text">1990</string>
    <string name="button_search_text">Search</string>
    <string name="button_search_content_description">Search</string>
    <string name="toast_search_criteria_required_msg">Please enter at least one of the search criteria</string>
    <string name="test_banner_unit_id">	ca-app-pub-3940256099942544/6300978111</string>
    <string name="AdView_content_description">This is a advertisement</string>
    <string name="progressBar_content_desc">Downloading data, please wait</string>

    <string name="analytics_search_key">search_key</string>
    <string name="analytics_selected_response">search_item_selected</string>
    <string name="saved_instance_bundle_fragment_key">last_fragment_displayed</string>

    <string name="main_error_msg_general">An error occurred. Please try later</string>
    <string name="main_error_msg">An error occurred. Please try later</string>
    <string name="main_error_msg_no_network">No network connection found. Please enable wifi or data connection and try again</string>
    <string name="main_error_msg_no_data_found">No result found. Please try with a different word or years</string>


    <string name="base_api_url">https://images-api.nasa.gov/</string>
    <string name="param_key_query">q</string>
    <string name="param_key_year_start">year_start</string>
    <string name="param_key_year_end">year_end</string>
    <string name="param_key_media_type">media_type</string>
    <string name="param_value_media_type">image</string>


    <!--    FragmentList-->
    <string name="item_image_content_desc">This image is titled as %1$s</string>


    <!--    FragmentDetail-->
    <string name="label_location_text">Location: </string>
    <string name="label_photographer_text">Secondary Creator Credit: </string>
    <string name="label_date_text">Date: </string>

    <string name="image_content">Image of the searched item</string>
    <string name="next_arrow_content">Next item</string>
    <string name="back_arrow_content">Previous item</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="saved_instance_bundle_key">item_position</string>
    <string name="secondary_creator_na">N/A</string>
    <string name="bundle_key_detail_item_position">item_position</string>

    <!--    Widget-->
    <string name="widget_action_detail_view">detail_view</string>
    <string name="widget_image_content_desc">this is an image for explorer widget application</string>
<!--    <string name="image_sunday">https://images-assets.nasa.gov/image/KSC-02pp0471/KSC-02pp0471~small.jpg</string>-->
<!--    <string name="image_monday">https://images-assets.nasa.gov/image/PIA00114/PIA00114~small.jpg</string>-->
<!--    <string name="image_tuesday">https://images-assets.nasa.gov/image/PIA07901/PIA07901~thumb.jpg</string>-->
<!--    <string name="image_wednesday">https://images-assets.nasa.gov/image/PIA04224/PIA04224~thumb.jpg</string>-->
<!--    <string name="image_thursday">https://images-assets.nasa.gov/image/GSFC_20171208_Archive_e000492/GSFC_20171208_Archive_e000492~thumb.jpg</string>-->
<!--    <string name="image_friday">https://images-assets.nasa.gov/image/PIA15427/PIA15427~thumb.jpg</string>-->
<!--    <string name="image_saturday">https://images-assets.nasa.gov/image/PIA01966/PIA01966~thumb.jpg</string>-->
<!--    <string name="image_default">https://images-assets.nasa.gov/image/AFRC2017-0233-007/AFRC2017-0233-007~thumb.jpg</string>-->
    <string name="name_saved_widget_image_file">explorer_widget.png</string>

    <string-array name="asset_ids">
        <item>KSC-02pp0471</item>
        <item>PIA00114</item>
        <item>PIA07901</item>
        <item>PIA04224</item>
        <item>GSFC_20171208_Archive_e000492</item>
        <item>PIA15427</item>
        <item>PIA01966</item>
        <item>AFRC2017-0233-007</item>
    </string-array>

    <string-array name="image_urls">
        <item>https://images-assets.nasa.gov/image/KSC-02pp0471/KSC-02pp0471~small.jpg</item>
        <item>https://images-assets.nasa.gov/image/PIA00114/PIA00114~small.jpg</item>
        <item>https://images-assets.nasa.gov/image/PIA07901/PIA07901~thumb.jpg</item>
        <item>https://images-assets.nasa.gov/image/PIA04224/PIA04224~thumb.jpg</item>
        <item>https://images-assets.nasa.gov/image/GSFC_20171208_Archive_e000492/GSFC_20171208_Archive_e000492~thumb.jpg</item>
        <item>https://images-assets.nasa.gov/image/PIA15427/PIA15427~thumb.jpg</item>
        <item>https://images-assets.nasa.gov/image/PIA01966/PIA01966~thumb.jpg</item>
        <item>https://images-assets.nasa.gov/image/AFRC2017-0233-007/AFRC2017-0233-007~thumb.jpg</item>
    </string-array>

    <string name="widget_intent_asset_id_key">key_asset_id</string>


    <!--    Worker-->
    <string name="shared_pref_id">com.example.explorer.sharedPref</string>
    <string name="shared_pref_file_name_key">shared_pref_file_name_key</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
