<?xml version="1.0" encoding="utf-8"?>
<layout>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">

    <TextView
        android:id="@+id/label_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:maxLines="4"
        android:padding="20dp"
        android:text="@string/introduction"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/label_query"
        android:layout_width="0dp"
        android:layout_height="@dimen/search_criteria_label_height"
        app:layout_constraintWidth_percent="@dimen/search_criteria_label_width_constraint"
        android:text="@string/label_query"
        android:textSize="18sp"
        android:textAlignment="viewEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_intro"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        />

    <AutoCompleteTextView
        android:id="@+id/et_query_input"
        android:layout_width="0dp"
        android:layout_height="@dimen/search_criteria_edit_text_height"
        app:layout_constraintWidth_percent="@dimen/search_criteria_edit_text_width_constraint"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/search_criteria_edit_text_margin_start"
        android:layout_marginEnd="@dimen/search_criteria_edit_text_margin_end"
       app:layout_constraintBottom_toBottomOf="@id/label_query"
        app:layout_constraintStart_toEndOf="@+id/label_query"
        android:inputType="text"
        android:hint="@string/query_text"
        android:completionThreshold = "1"

        />

    <TextView
        android:id="@+id/label_start_year"
        android:layout_width="0dp"
        android:layout_height="@dimen/search_criteria_label_height"
        app:layout_constraintWidth_percent="@dimen/search_criteria_label_width_constraint"
        android:text="@string/label_start_year"
        android:textSize="18sp"
        android:textAlignment="viewEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_query"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />

    <AutoCompleteTextView
        android:id="@+id/et_start_year_input"
        android:layout_width="0dp"
        android:layout_height="@dimen/search_criteria_edit_text_height"
        app:layout_constraintWidth_percent="@dimen/search_criteria_edit_text_width_constraint"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/search_criteria_edit_text_margin_start"
        android:layout_marginEnd="@dimen/search_criteria_edit_text_margin_end"
        app:layout_constraintBottom_toBottomOf="@id/label_start_year"
        app:layout_constraintStart_toEndOf="@+id/label_start_year"
        android:inputType="date"
        android:hint="@string/start_year_text"
        android:completionThreshold = "1"
        />

    <TextView
        android:id="@+id/label_end_year"
        android:layout_width="0dp"
        android:layout_height="@dimen/search_criteria_label_height"
        app:layout_constraintWidth_percent="@dimen/search_criteria_label_width_constraint"
        android:text="@string/label_end_year"
        android:textSize="18sp"
        android:textAlignment="viewEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_start_year"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />

    <AutoCompleteTextView
        android:id="@+id/et_end_year_input"
        android:layout_width="0dp"
        android:layout_height="@dimen/search_criteria_edit_text_height"
        app:layout_constraintWidth_percent="@dimen/search_criteria_edit_text_width_constraint"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/search_criteria_edit_text_margin_start"
        android:layout_marginEnd="@dimen/search_criteria_edit_text_margin_end"
        app:layout_constraintBottom_toBottomOf="@id/label_end_year"
        app:layout_constraintStart_toEndOf="@+id/label_end_year"
        android:inputType="date"
        android:hint="@string/end_year_text"
        android:completionThreshold = "1"
        />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_end_year"
        android:layout_marginTop="30dp"
        android:onClick="searchClicked"
        />

    <ProgressBar
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:id="@+id/pb_main"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_error_msg"
        app:layout_constraintStart_toStartOf="parent"
       android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/button_search"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:text="@string/main_error_msg_general"
        android:padding="12dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>