<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/sv_detail"
        android:background="@drawable/detail_backdrop_small"

        >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <ImageView
            android:id="@+id/iv_detail_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_content"
            app:layout_constraintDimensionRatio="12:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_marginTop="50dp"
            />



        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_image"
            tools:text="Our Neighbor Andromeda"
            android:layout_marginStart="@dimen/detail_group_margin_start"
            android:layout_marginEnd="@dimen/detail_group_margin_start"
            android:layout_marginTop="20dp"
            android:textColor="@color/detail_text_color"
            />


        <TextView
            android:id="@+id/label_creator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent=".45"
            android:text="@string/label_photographer_text"
            app:layout_constraintStart_toStartOf="@id/tv_detail_title"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/detail_text_color"

            />

        <TextView
            android:id="@+id/tv_creator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent=".53"
            tools:text="NASA/ University of California/ University of Florida"
            android:maxLines="3"
            app:layout_constraintStart_toEndOf="@id/label_creator"
            app:layout_constraintTop_toTopOf="@id/label_creator"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="@dimen/detail_group_margin_start"
            android:textSize="16sp"
            android:textColor="@color/detail_text_color"

            />

        <TextView
            android:id="@+id/label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date_text"
            app:layout_constraintStart_toStartOf="@id/label_creator"
            app:layout_constraintTop_toBottomOf="@id/tv_creator"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/detail_text_color"
            />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="25th February, 2010"
            app:layout_constraintStart_toEndOf="@id/label_date"
            app:layout_constraintTop_toTopOf="@id/label_date"
            android:layout_marginStart="@dimen/detail_group_margin_start"
            android:layout_marginEnd="@dimen/detail_group_margin_start"
            android:textSize="16sp"
            android:textColor="@color/detail_text_color"
            />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="This image was an observation of XYZ"
            app:layout_constraintStart_toStartOf="@id/label_date"
            app:layout_constraintTop_toBottomOf="@id/label_date"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/detail_group_margin_start"
            android:layout_marginEnd="@dimen/detail_group_margin_start"
            android:layout_marginTop="16dp"
            android:paddingBottom="50dp"
            android:textSize="16sp"
            android:textColor="@color/detail_text_color"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>